--- a/css/queries.css
+++ b/css/queries.css
@@ -42,7 +42,8 @@ Instead, 1rem = 1em = 16px */
   }
 
   .header {
-    padding: 0 3.2rem;
+    padding: 0
+      3.2rem;
   }
 
   .hero {
@@ -54,7 +55,8 @@ Instead, 1rem = 1em = 16px */
   }
 
   .testimonials-container {
-    padding: 9.6rem 3.2rem;
+    padding: 9.6rem
+      3.2rem;
   }
 }
 
@@ -63,7 +65,6 @@ Instead, 1rem = 1em = 16px */
 /* ********************************************* */
 
 @media (max-width: 59em) {
-
   /* 8px / 16px = 0.5 = 50% */
   html {
     font-size: 50%;
@@ -98,7 +99,9 @@ Instead, 1rem = 1em = 16px */
   }
 
   .meal-content {
-    padding: 2.4rem 3.2rem 3.2rem 3.2rem;
+    padding: 2.4rem
+      3.2rem 3.2rem
+      3.2rem;
   }
 
   .section-testimonials {
@@ -106,7 +109,10 @@ Instead, 1rem = 1em = 16px */
   }
 
   .gallery {
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(
+      6,
+      1fr
+    );
     gap: 1.2rem;
   }
 
@@ -129,18 +135,34 @@ Instead, 1rem = 1em = 16px */
   }
 
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.97);
+    background-color: rgba(
+      255,
+      255,
+      255,
+      0.9
+    );
+    /* Does not work on safari, therefore just use the above instead */
+    /* -webkit, for sarari, since it only supports backdrop-filter with this enabled */
+    -webkit-backdrop-filter: blur(
+      5px
+    );
+    backdrop-filter: blur(
+      6px
+    );
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
-    transform: translateX(100%);
+    transform: translateX(
+      100%
+    );
 
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0.5s ease-in;
+    transition: all
+      0.5s ease-in;
 
     /* HIDE NAVIGATION */
     /* Allows no transitions at all/can not animate(display:none) */
@@ -157,18 +179,23 @@ Instead, 1rem = 1em = 16px */
     visibility: hidden;
   }
 
-  .nav-open .main-nav {
+  .nav-open
+    .main-nav {
     opacity: 1;
     pointer-events: auto;
     visibility: visible;
-    transform: translateX(0);
+    transform: translateX(
+      0
+    );
   }
 
-  .nav-open .icon-mobile-nav[name="close-outline"] {
+  .nav-open
+    .icon-mobile-nav[name="close-outline"] {
     display: block;
   }
 
-  .nav-open .icon-mobile-nav[name="menu-outline"] {
+  .nav-open
+    .icon-mobile-nav[name="menu-outline"] {
     display: none;
   }
 
@@ -187,15 +214,18 @@ Instead, 1rem = 1em = 16px */
 /* BELOW 704px (smaller tablets)
 /* ********************************************* */
 
-@media (max-width:44em) {
-
+@media (max-width: 44em) {
   .grid--3-cols,
   .grid--4-cols {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(
+      2,
+      1fr
+    );
   }
 
   .diets {
-    grid-column: 1 / -1;
+    grid-column: 1 /
+      -1;
     justify-self: center;
   }
 
@@ -208,18 +238,23 @@ Instead, 1rem = 1em = 16px */
   }
 
   .grid--footer {
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(
+      6,
+      1fr
+    );
   }
 
   .nav-col {
     grid-row: 1;
-    grid-column: span 2;
+    grid-column: span
+      2;
     margin-bottom: 3.2rem;
   }
 
   .logo-col,
   .address-col {
-    grid-column: span 3;
+    grid-column: span
+      3;
   }
 }
 
@@ -239,17 +274,21 @@ Instead, 1rem = 1em = 16px */
   }
 
   .section-hero {
-    padding: 2.4rem 0rem 6.4rem 0rem;
+    padding: 2.4rem
+      0rem 6.4rem
+      0rem;
   }
 
   .hero {
-    padding: 0 3.2rem;
+    padding: 0
+      3.2rem;
   }
 
   .btn,
   .btn:link,
   .btn:visited {
-    padding: 2.4rem 1.6rem;
+    padding: 2.4rem
+      1.6rem;
   }
 
   .hero-img {
@@ -260,16 +299,22 @@ Instead, 1rem = 1em = 16px */
     height: 1.2rem;
   }
 
-  .step-img-box:nth-child(2) {
+  .step-img-box:nth-child(
+      2
+    ) {
     grid-row: 1;
   }
 
-  .step-img-box:nth-child(6) {
+  .step-img-box:nth-child(
+      6
+    ) {
     grid-row: 5;
   }
 
   .step-img-box {
-    transform: translateY(2.4rem);
+    transform: translateY(
+      2.4rem
+    );
   }
 
   .testimonials {
@@ -277,7 +322,10 @@ Instead, 1rem = 1em = 16px */
   }
 
   .gallery {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(
+      4,
+      1fr
+    );
     gap: 1.2rem;
   }
 
@@ -295,7 +343,6 @@ Instead, 1rem = 1em = 16px */
   }
 }
 
-
 /* 
 - Font sizes (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 
@@ -303,3 +350,91 @@ Instead, 1rem = 1em = 16px */
 SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 */
+
+/* ********************************************* */
+/* Fixing Sarafi flexbox gap
+/* ********************************************* */
+
+.no-flexbox-gap
+  .main-nav-list
+  li:not(
+    :last-child
+  ) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap
+  .list-item:not(
+    :last-child
+  ) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap
+  .list-icon:not(
+    :last-child
+  ) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap
+  .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap
+  .meal-attribute:not(
+    :last-child
+  ) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap
+  .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap
+  .footer-row
+  div:not(
+    :last-child
+  ) {
+  margin-right: 6.4rem;
+}
+
+.no-flexbox-gap
+  .social-links
+  li:not(
+    :last-child
+  ) {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap
+  .footer-nav
+  li:not(
+    :last-child
+  ) {
+  margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+  .no-flexbox-gap
+    .main-nav-list
+    li:not(
+      :last-child
+    ) {
+    margin-right: 3.2rem;
+  }
+}
+
+@media (max-width: 59em) {
+  .no-flexbox-gap
+    .main-nav-list
+    li:not(
+      :last-child
+    ) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
+  }
+}
